# sentiment-score

./: .gitignore  Dockerfile  Evaluated tweets - Copy.csv  compute_sentiment_score_from_neo4j.py  confusion_matrix.ipynb  flake.nix  load_data.py  main.py  pyproject.toml  sentiment_analysis_marc.ipynb
sentiment_analysis/: load_data.ipynb  load_data.py
