[project]
name = "dbl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=3.6.0",
    "dotenv>=0.9.9",
    "neo4j",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.250527",
    "scipy>=1.15.3",
    "scipy-stubs>=1.15.3.0",
    "sentencepiece>=0.2.0",
    "torch>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.51.3",
]
